--- a/Views/Admin/add-brand.ejs
+++ b/Views/Admin/add-brand.ejs
@@ -16,13 +16,16 @@
 <%-include('../partials/admin-sample-nav')-%>
 <section>
   <div class="container">
-    <div class="header">
+    <div class="header mb-5">
       <span>Add Brands</span>
     </div>
     <form action="/admin/add-brand" method="post" enctype="multipart/form-data">
+      
+
     <div class="text">
-      <div class="textfield mt-5 mb-5">
-        <input required type="text" placeholder="Brand Name" id="Brand_name" name="Brand_name">
+      <span id="nameError" class="error "></span>
+      <div class="textfield  mb-5">
+        <input required type="text" placeholder="Brand Name" id="Brand_name" name="Brand_name" onchange="validatebrand()">
       </div>
     </div>
     <div class="images d-flex justify-content-start">
@@ -37,16 +40,18 @@
     </div>
     <div class="action-buttons">
       <div class="cancel-btn">
-        <a href="#" class="btn btn-outline" >Cancel</a>
+        <a href="/admin/brand" class="btn btn-outline" >Cancel</a>
       </div>
       <div class="save-btn">
-       <input type="submit" class="btn btn-info text-white" value="SAVE">
+       <input type="submit" class="btn btn-info text-white" disabled id="signupButton" value="SAVE">
       </div>
 
     </div>
   </form>
   </div>
 </section>
+<script src="/static/js/add-category.js"></script>
+
 <script>
   function previewImage(inputId, imgId) {
         const input = document.getElementById(inputId);
