--- a/Views/Admin/add-products.ejs
+++ b/Views/Admin/add-products.ejs
@@ -24,24 +24,34 @@
                 <div class="general-main">
                   <span class="mt-2" style="font-size: 1.5rem;font-weight: 700;">General Main</span>
                   <div class="textfield mt-5">
-                    <input required type="text" placeholder="Product Name" id="Product_Name" name="Product_Name">
+                    <input required type="text" placeholder="Product Name" id="Product_Name" name="Product_Name" onchange="validateName()">
                   </div>
+                  <span id="productError" class="error"></span>
+
                   <div class="textfield mt-5">
-                    <input required type="Text" placeholder="Description" id="Description" name="Description">
+                    <input required type="Text" placeholder="Description" id="Description" name="Description" onchange="validateDescription()">
                   </div>
+                  <span id="descriptionError" class="error"></span>
+
                   <div class="textfield mt-5">
-                    <input required type="number" placeholder="stock" id="stock" name="stock">
+                    <input required type="number" placeholder="stock" id="stock" name="stock" onchange="validateStock()" >
                   </div>
+                  <span id="stockError" class="error"></span>
+
                   <div class="textfield mt-5">
-                    <input required type="number" placeholder="basePrice" id="basePrice" name="basePrice">
+                    <input required type="number" placeholder="base Price" id="basePrice" name="basePrice" onchange="validatbase()">
                   </div>
+                  <span id="baseError" class="error"></span>
+
                   <div class="textfield mt-5">
-                    <input required type="number" placeholder="descountedPrice" id="descountedPrice"
-                      name="descountedPrice">
+                    <input required type="number" placeholder="descounted Price" id="descountedPrice"
+                      name="descountedPrice" onchange="validatprice()">
                   </div>
+                  <span id="priceError" class="error"></span>
+
                   <div class="textfield mt-5 ">
-                    <select name="brand" id="brand">
-                      <option value="">Select Brand</option>
+                    <select name="brand" id="brand" onchange="validateBrand()">
+                      <option value="default">Select Brand</option>
                       <%if(brand){%>
                         <%brand.forEach((data)=>{%>
                           <option value="<%=data.name%>">
@@ -51,9 +61,11 @@
                             <%}%>
                     </select>
                   </div>
+                  <span id="brandError" class="error"></span>
+
                   <div class="textfield mt-5 mb-5">
-                    <select name="category" id="category">
-                      <option value="">Select Category</option>
+                    <select name="category" id="category" onchange="validcategory()">
+                      <option value="default">Select Category</option>
                       <%if(category){%>
                         <%category.forEach((data)=>{%>
                           <option value="<%=data.name%>">
@@ -63,6 +75,8 @@
                             <%}%>
                     </select>
                   </div>
+                  <span id="categoryError" class="error"></span>
+
                 </div>
               </div>
               <div class="col-12 col-sm-12 col-md-6 col-lg-6">
@@ -106,7 +120,7 @@
                     <a href="/admin/products" class="btn btn-outline" >Cancel</a>
                   </div>
                   <div class="save-btn">
-                   <input type="submit" class="btn btn-info text-white" value="SAVE">
+                   <input type="submit" class="btn btn-info text-white" id="signupButton" value="SAVE" disabled>
                   </div>
 
                 </div>
@@ -116,6 +130,7 @@
         </form>
       </div>
     </div>
+  <script src="/static/js/add_product.js"></script>
     <script>
       let list = document.querySelectorAll(".navigation_nav li");
 
