--- a/Views/User/products.ejs
+++ b/Views/User/products.ejs
@@ -224,7 +224,7 @@
         <!-- content -->
         <div class="col-lg-9">
           <header class="d-sm-flex align-items-center border-bottom mb-4 pb-3">
-            <strong class="d-block py-2">32 Items found </strong>
+            <!-- <strong class="d-block py-2">32 Items found </strong> -->
             <!-- <div class="ms-auto">
               <select class="form-select d-inline-block w-auto border pt-1">
                 <option value="0">Best match</option>
