--- a/Views/Admin/add-category.ejs
+++ b/Views/Admin/add-category.ejs
@@ -16,14 +16,17 @@
 <%-include('../partials/admin-sample-nav')-%>
 <section>
   <div class="container">
-    <div class="header">
+    <div class="header mb-5">
       <span>Add Category</span>
     </div>
     <form action="/admin/add-category" method="post" enctype="multipart/form-data">
     <div class="text">
-      <div class="textfield mt-5 mb-5">
-        <input required type="text" placeholder="Category Name" id="Category_name" name="Category_name">
+      <span id="nameError" class="error "></span>
+      <div class="textfield  mb-5">
+        <input required type="text" placeholder="Category Name" id="Category_name" name="Category_name" onchange="validateName()">
       </div>
+      
+
     </div>
     <div class="images d-flex justify-content-start">
       <input type="file" name="main" accept="image/*" id="main" required
@@ -37,16 +40,18 @@
     </div>
     <div class="action-buttons">
       <div class="cancel-btn">
-        <a href="#" class="btn btn-outline" >Cancel</a>
+        <a href="/admin/categories" class="btn btn-outline" >Cancel</a>
       </div>
       <div class="save-btn">
-       <input type="submit" class="btn btn-info text-white" value="SAVE">
+       <input type="submit" class="btn btn-info text-white" disabled id="signupButton" value="SAVE">
       </div>
 
     </div>
   </form>
   </div>
 </section>
+<script src="/static/js/add-category.js"></script>
+
 <script>
   function previewImage(inputId, imgId) {
         const input = document.getElementById(inputId);
