--- a/Views/partials/slider.ejs
+++ b/Views/partials/slider.ejs
@@ -3,10 +3,10 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img style="width: 100%;
-            height: 400px;" src="/static/images/slider-1.jpg" class="d-block w-100" alt="...">
+            height: 500px;" src="/static/images/banner_01.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <div class="custom-carousel-content">
-                    <h1>
+                    <!-- <h1>
                         <span>Best Ecommerce Solutions 1 </span>
                         to Boost your Brand Name &amp; Sales
                     </h1>
@@ -18,16 +18,16 @@
                         <a href="#" class="btn btn-slider">
                             Get Now
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
         <div class="carousel-item">
             <img style="width: 100%;
-            height: 400px;" src="/static/images/slider-2.jpg" class="d-block w-100" alt="...">
+            height: 500px;" src="/static/images/banner_02.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <div class="custom-carousel-content">
-                    <h1>
+                    <!-- <h1>
                         <span>Best Ecommerce Solutions 2 </span>
                         to Boost your Brand Name &amp; Sales
                     </h1>
@@ -39,20 +39,20 @@
                         <a href="#" class="btn btn-slider">
                             Get Now
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
         <div class="carousel-item">
             <img style="width: 100%;
-            height: 400px;" src="/static/images/slider-3.jpg" class="d-block w-100" alt="...">
+            height: 500px;" src="/static/images/banner_3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <div class="custom-carousel-content">
-                    <h1>
+                    <!-- <h1>
                         <span>Best Ecommerce Solutions 3 </span>
                         to Boost your Brand Name &amp; Sales
-                    </h1>
-                    <p>
+                    </h1> -->
+                    <!-- <p>
                         We offer an industry-driven and successful digital marketing strategy that helps our clients
                         in achieving a strong online presence and maximum company profit.
                     </p>
@@ -60,7 +60,7 @@
                         <a href="#" class="btn btn-slider">
                             Get Now
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
